CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Set compiler
#SET(CMAKE_C_COMPILER "gcc")
#SET(CMAKE_CXX_COMPILER "g++")

PROJECT(support_gen)

#SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_BUILD_TYPE Debug)

# Set output directories
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
MAKE_DIRECTORY(${EXECUTABLE_OUTPUT_PATH})

# Create 64 bits binary.  32 bits support is dropped.
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Os -std=c++11")
SET(CMAKE_LIBRARY_PATH /opt/local/lib ${CMAKE_LIBRARY_PATH})

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES($ENV{VCGLIB_PATH})
LINK_DIRECTORIES(/opt/local/lib)

SET(SRC_FILES main_command.cpp)
SET(INC_FILES edge_mesh_type.h tri_mesh_type.h)

ADD_EXECUTABLE(support_gen ${SRC_FILES} ${INC_FILES})

